--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "pusher/pusher-php-server": "^7.2",
         "rebing/graphql-laravel": "^8.6"
     },
     "require-dev": {
@@ -48,6 +49,44 @@
             "@php artisan key:generate --ansi"
         ]
     },
+    "config-server-base": [
+        "sudo chmod -R 777 storage/",
+        "sudo chmod -R 777 storage/public",
+        "sudo chmod -R 777 public/",
+        "sudo chmod -R 777 public/app-assets/assets/images",
+        "sudo chmod -R 777 bootstrap/cache",
+        "sudo chmod -R 777 storage/ bootstrap/cache",
+        "cp .env.server .env",
+        "php artisan clear-compiled",
+        "composer dumpautoload",
+        "php artisan config:cache",
+        "sudo mkdir -p s public/images",
+        "sudo mkdir -p s storage/app/public/images/produits"
+    ],
+    "config-server-laravel-app": [
+        "@config-server-base",
+        "chown -R www-data:www-data storage bootstrap/cache"
+    ],
+    "config-server-linux": [
+        "@config-server-laravel-app",
+        "sudo chmod -R 777 storage/public/images/produits"
+    ],
+    "config-server-linux-test": [
+        "sudo chmod -R 777 storage/",
+        "sudo chmod -R 777 storage/app/public",
+        "sudo chmod -R 777 public/",
+        "sudo chmod -R 777 public/app-assets/assets/images",
+        "sudo chmod -R 777 bootstrap/cache",
+        "sudo chmod -R 777 storage/ bootstrap/cache",
+        "cp .env.server.test .env",
+        "php artisan clear-compiled",
+        "composer dumpautoload",
+        "php artisan config:cache",
+        "sudo mkdir -p s public/uploads/img_prod",
+        "sudo mkdir -p s storage/public/images/produits",
+        "chown -R www-data:www-data storage bootstrap/cache",
+        "sudo chmod -R 777 storage/public/images/produits"
+    ],
     "extra": {
         "laravel": {
             "dont-discover": []
