--- a/.env
+++ b/.env
@@ -2,17 +2,17 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:NxTjfu4BW4OpHNP+2EL9Y5DgW4bBqsuGeekaOHAhgOo=
 APP_DEBUG=true
-APP_URL=https://chroflix.com
+APP_URL=http://45.63.94.164/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=chroflix_db
-DB_USERNAME=root
+DB_PORT=5432
+DB_DATABASE=chroflix_db_test
+DB_USERNAME=postgres
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
