--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_DATABASE=chroflix_db_test
 DB_USERNAME=postgres
-DB_PASSWORD=
+DB_PASSWORD=sallaface4
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
