--- a/.env
+++ b/.env
@@ -1,12 +1,10 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME=chroflix
+APP_ENV=production
 APP_KEY=base64:NxTjfu4BW4OpHNP+2EL9Y5DgW4bBqsuGeekaOHAhgOo=
 APP_DEBUG=true
-APP_URL=http://45.63.94.164/
+APP_URL="http://45.63.94.164/chroflix_back"
 
 LOG_CHANNEL=stack
-LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
@@ -17,25 +15,37 @@ DB_PASSWORD=sallaface4
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
-SESSION_LIFETIME=120
-
-MEMCACHED_HOST=127.0.0.1
+QUEUE_CONNECTION=sync
+SESSION_LIFETIME=1440
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=null
+MAIL_FROM_NAME='${APP_NAME}'
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=
+
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_APP_CLUSTER=mt1
+
+ENABLE_GRAPHIQL = false
+
+MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 
 PAYMENT_REQUEST_PATH = /api/payment/request-payment
