--- a/.env.server
+++ b/.env.server
@@ -2,7 +2,7 @@ APP_NAME=chroflix
 APP_ENV=production
 APP_KEY=base64:NxTjfu4BW4OpHNP+2EL9Y5DgW4bBqsuGeekaOHAhgOo=
 APP_DEBUG=true
-APP_URL="http://45.63.94.164/"
+APP_URL="http://45.63.94.164"
 
 LOG_CHANNEL=stack
 
